# PyProject_Modul_4

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html
src/: category.py  iterator.py  product.py
tests/: conftest.py  test_category.py  test_iterator.py  test_product.py
