[project]
name = "pyproject-modul-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Suvorov.Alexandr",email = "sasha.suvorov03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
